# ChatBotFlask

./: .dockerignore  Dockerfile  README.md  app.py  create_docker_compose.py  oxford.txt  package-lock.json  package.json  pyproject.toml  rag.py  setup.ps1
SCT/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_full_docs.json  kv_store_llm_response_cache.json  kv_store_text_chunks.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
src/: App.js
tests/: test_app.py  test_rag.py
